--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -105,6 +105,10 @@
                 background: aliceblue;
             }
         }
+        .archiveShow-block__backRoundIndex {
+            text-align: center;
+            display: block;
+        }
     }
     
     @media(max-width: 700px) {
