--- a/app/assets/stylesheets/plays.scss
+++ b/app/assets/stylesheets/plays.scss
@@ -45,6 +45,7 @@
             line-height: 150px;
             color: #ffffff;
             border: none;
+            font-size: 12px;
         }
         .play-edit__holeButton:hover {
             cursor: pointer;
