--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -64,6 +64,9 @@
             font-size: 20px;
             line-height: 40px;
         }
+        .messageForm-block__submit:hover {
+            cursor: pointer;
+        }
         .messageForm-block__filefield {
             font-size: 18px;
         }
