--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,29 @@
-<div class="home-block">
-  <%= render 'top_menu'%>
-</div>
+<% if user_signed_in? %>
+  <div class="home-block">
+    <%= render 'top_menu'%>
+  </div>
+  <% end %>
 
   <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
     <div class="newsList">
       <%= render 'playing_round'%>
       <%= render 'following_timeline'%>
     </div>
+  <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+    <div class="newsList">
+      <%= render 'guest_player_timeline'%>
+    </div>
   <% end %>
 
   <% unless user_signed_in? %>
-  <p>SOLOGOLはお一人様ゴルフをより楽しくプレーするためのアプリです。</p>
-    <div class="authBlock">
-      <%= link_to "ログイン", new_user_session_path, class: 'btn btn-outline-primary authBlock__btn' %><br>
-      <%= link_to "新規登録", new_user_registration_path, class: 'btn btn-outline-success authBlock__btn' %><br>
-      <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "btn btn-outline-warning authBlock__btn" %><br>
+    <div class="home-block__round">
+      <h2>最近のラウンド情報</h2>
+      <% @scores.each do|score|%>
+        <p class="home-block__p">
+          <%= score.played_date.strftime('%-m月%d日(%a)') %>に
+          <span class="home-block__span"><%= score.user.name%></span>プロが
+          <span class="home-block__span"><%= score.golfcourse.golfcourseabbr%></span>でプレーしています。
+        </p>
+      <% end %>
     </div>
   <% end %>
