--- a/app/views/home/_following_timeline.html.erb
+++ b/app/views/home/_following_timeline.html.erb
@@ -1,6 +1,6 @@
 <div class="follwingPlayList">
   <div class="image_and_title">
-    <%= image_tag('cap-02.svg', class: "newsList__image", id: "test") %>
+    <%= image_tag asset_path('cap-02.svg'), class: "newsList__image", id: "test" %>
     <div class="title_group">
       <h4>フォローしているプレイヤーのラウンド情報</h4>
     </div>
