--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -1,6 +1,6 @@
 <div class="unfinishedList">
   <div class="image_and_title">
-    <%= image_tag('putter-02.svg', class: "newsList__image") %>
+    <%= image_tag asset_path('putter-02.svg'), class: "newsList__image" %>
     <div class="title_group">
       <h4>スコア入力中のラウンド</h4>
       <p>クリックすると、スコア入力画面に戻れます。</p>
