--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -2,7 +2,7 @@
 
 	<%# アバター %>
 	<% if message.user.avatar? %>
-		<%= image_tag message.user.avatar.url, class: "score-block__img"%>
+		<%= image_tag asset_path(message.user.avatar.url), class: "score-block__img"%>
 	<% else %>
 		<img src="/assets/ball.svg" class="score-block__img">
 	<% end %>
