--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -7,7 +7,7 @@
       <% @message.liked_users.each do |user| %>
         <li class="likeUser__list">
           <% if user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
-            <%= image_tag user.avatar.url, class: "avatar-img"%>
+            <%= image_tag asset_path(user.avatar.url), class: "avatar-img"%>
           <% else %>
             <img src="/assets/ball.svg" class="avatar-img">
         <% end %>
