--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
     <% @users.each do |user| %>
       <li class="user-Search__list">
         <% if user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
-          <%= image_tag user.avatar.url, class: "avatar-img"%>
+          <%= image_tag asset_path(user.avatar.url), class: "avatar-img"%>
         <% else %>
           <img src="/assets/ball.svg" class="avatar-img">
         <% end %>
