--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -5,7 +5,7 @@
       <% if @user.avatar? %>  
         <%= image_tag asset_path(@user.avatar.url), class: "mypageEdit-block__avatar" %>
       <% else %>
-        <img src="/assets/ball.svg" class="mypageEdit-block__avatar">
+        <%= image_tag asset_path("ball.svg"), class: "mypageEdit-block__avatar" %>
       <% end %>
       <p>プロフィール画像</p>
     </div>
