--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -89,6 +89,7 @@
         .score-card__table {
             width: 320px;
             display: flex;
+            margin: 0 auto;
         }
         .leader-board {
             width: 320px;
