--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -137,8 +137,7 @@
         .mypageEdit-block__flex {
             flex-direction: column;
         }
-        .mypageEdit-block__leftsideBlock,
-        {
+        .mypageEdit-block__leftsideBlock {
             width: 100%;
             justify-content: end;
         }
