--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -22,7 +22,7 @@
         <div class="userForm__child">
         <%= f.label :avatar, "プロフィール画像", class: "form_label" %>
         <%= f.file_field :avatar, class: "form_input"  %>
-        <%= f.hidden_field :avatar_cache %>
+        <%#= f.hidden_field :avatar_cache %>
         </div>
 
         <%= f.submit "編集する", class: "form_submit_button" %>
