--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,6 +168,9 @@
             .topMenu-image__avatar {
                 width: 200px;
             }
+            .headerBlock__nav {
+                display: none;
+            }
         }
         .footer-block {
             font-size: 3vw;
