--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,35 +1,34 @@
 <header>
-<div class="headerBlock">
-  <%= link_to image_tag('logo-01.svg', class: "headerBlock__avatar"), root_path  %>
-  <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
-    <% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
-      <%= image_tag asset_path(current_user.avatar.url), class: "avatar-img 
-                                                      btn
-                                                      btn-secondary
-                                                      dropdown-toggle", 
-                                                      'data-toggle': "dropdown", 
-                                                      'aria-haspopup': "true", 
-                                                      'aria-expanded': "false", 
-                                                      id: "dropdown1", 
-                                                      type: "button" %>
-    <% else %>
-      <%= image_tag asset_path("ball.svg"), class: "avatar-img 
-                                                      btn
-                                                      btn-secondary
-                                                      dropdown-toggle", 
-                                                      'data-toggle': "dropdown", 
-                                                      'aria-haspopup': "true", 
-                                                      'aria-expanded': "false", 
-                                                      id: "dropdown1", 
-                                                      type: "button" %>
-    
-    <% end %>
-    <div class="dropdown-menu" aria-labelledby="dropdown1">
-      <%= link_to current_user.name, mypage_path, class: "dropdown-item" %>
-      <%#= link_to current_user.email, mypage_path, class: "dropdown-item" %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
-    </div>
-  <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+  <div class="headerBlock">
+    <%= link_to image_tag('logo-01.svg', class: "headerBlock__avatar"), root_path  %>
+    <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+      <% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+        <%= image_tag asset_path(current_user.avatar.url), class: "avatar-img 
+                                                        btn
+                                                        btn-secondary
+                                                        dropdown-toggle", 
+                                                        'data-toggle': "dropdown", 
+                                                        'aria-haspopup': "true", 
+                                                        'aria-expanded': "false", 
+                                                        id: "dropdown1", 
+                                                        type: "button" %>
+      <% else %>
+        <%= image_tag asset_path("ball.svg"), class: "avatar-img 
+                                                        btn
+                                                        btn-secondary
+                                                        dropdown-toggle", 
+                                                        'data-toggle': "dropdown", 
+                                                        'aria-haspopup': "true", 
+                                                        'aria-expanded': "false", 
+                                                        id: "dropdown1", 
+                                                        type: "button" %>
+      
+      <% end %>
+      <div class="dropdown-menu" aria-labelledby="dropdown1">
+        <%= link_to current_user.name, mypage_path, class: "dropdown-item" %>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
+      </div>
+    <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
       <% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
       <%= image_tag asset_path(current_user.avatar.url), class: "avatar-img 
                                                       btn
@@ -40,32 +39,44 @@
                                                       'aria-expanded': "false", 
                                                       id: "dropdown1", 
                                                       type: "button" %>
+      <% else %>
+        <%= image_tag asset_path("ball.svg"), class: "avatar-img 
+                                                              btn
+                                                              btn-secondary
+                                                              dropdown-toggle", 
+                                                              'data-toggle': "dropdown", 
+                                                              'aria-haspopup': "true", 
+                                                              'aria-expanded': "false", 
+                                                              id: "dropdown1", 
+                                                              type: "button" %>    
+      <% end %>
+      <div class="dropdown-menu" aria-labelledby="dropdown1">
+        <p class="dropdown-item"><%= current_user.name %></p>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
+      </div>
     <% else %>
-      <%= image_tag asset_path("ball.svg"), class: "avatar-img 
-                                                            btn
-                                                            btn-secondary
-                                                            dropdown-toggle", 
-                                                            'data-toggle': "dropdown", 
-                                                            'aria-haspopup': "true", 
-                                                            'aria-expanded': "false", 
-                                                            id: "dropdown1", 
-                                                            type: "button" %>    <% end %>
-    <div class="dropdown-menu" aria-labelledby="dropdown1">
-      <p class="dropdown-item"><%= current_user.name %></p>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
-    </div>
-  <% else %>
-  <nav class="headerBlock__nav">
-    <ul class="headerBlock__ul">
-      <li><%= link_to "ログイン", new_user_session_path, class: '' %></li>
-      <li><%= link_to "新規登録", new_user_registration_path, class: '' %></li>
-      <li><%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "" %></li>
-    </ul>
-  </nav>
-
-
-
-  <% end %>
+      <div class="dropdown">
+        <i class="fas fa-bars"
+                  type="button" id="dropdown1"
+                  class="btn btn-secondary dropdown-toggle"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false">
+        </i>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
+          <%= link_to "ログイン", new_user_session_path, class: 'dropdown-item' %>
+          <%= link_to "新規登録", new_user_registration_path, class: 'dropdown-item' %>
+          <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'dropdown-item' %>
+        </div>
+      </div>
+      <nav class="headerBlock__nav">
+        <ul class="headerBlock__ul">
+          <li><%= link_to "ログイン", new_user_session_path, class: '' %></li>
+          <li><%= link_to "新規登録", new_user_registration_path, class: '' %></li>
+          <li><%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "" %></li>
+        </ul>
+      </nav>
+    <% end %>
   </div>
 </header>
 
