--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -134,6 +134,7 @@
         width: 95%;
         padding: 5px;
         height: auto;
+        margin: 10px auto;
         .mypageEdit-block__flex {
             flex-direction: column;
         }
