--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -63,6 +63,7 @@
             margin: 15px auto;
             font-size: 20px;
             line-height: 40px;
+            background-color: darkseagreen;
         }
         .messageForm-block__submit:hover {
             cursor: pointer;
