--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -135,6 +135,8 @@
             margin: 17px auto;
             width: 250px;
             border-radius: 16px;
+            background-color: darkseagreen;
+            border: none;
         }
         .archiveEdit-block__back {
             text-align: center;
