--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -157,6 +157,7 @@
         margin: 15px auto;
         font-size: 20px;
         line-height: 40px;
+        background-color: darkseagreen;
     }
     .user-davise__link {
         display: block;
