--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -129,6 +129,7 @@
         .home-block__p {
             font-size: 12px;
             text-align: left;
+            height: auto;
         }
         .home-block__span {
             font-size: 13px;
@@ -142,6 +143,7 @@
             text-align: right;
             margin-top: 5px;
             font-size: 25px;
+            background-color: rgba(0, 0, 0, 0);
         }
     }
 }
