--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,8 +10,7 @@
                                                         'data-toggle': "dropdown", 
                                                         'aria-haspopup': "true", 
                                                         'aria-expanded': "false", 
-                                                        id: "dropdown1", 
-                                                        type: "button" %>
+                                                        id: "dropdown1" %>
       <% else %>
         <%= image_tag asset_path("ball.svg"), class: "avatar-img 
                                                         btn
@@ -20,11 +19,10 @@
                                                         'data-toggle': "dropdown", 
                                                         'aria-haspopup': "true", 
                                                         'aria-expanded': "false", 
-                                                        id: "dropdown1", 
-                                                        type: "button" %>
+                                                        id: "dropdown1" %>
       
       <% end %>
-      <div class="dropdown-menu" aria-labelledby="dropdown1">
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
         <%= link_to current_user.name, mypage_path, class: "dropdown-item" %>
         <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
       </div>
@@ -37,8 +35,7 @@
                                                       'data-toggle': "dropdown", 
                                                       'aria-haspopup': "true", 
                                                       'aria-expanded': "false", 
-                                                      id: "dropdown1", 
-                                                      type: "button" %>
+                                                      id: "dropdown1" %>
       <% else %>
         <%= image_tag asset_path("ball.svg"), class: "avatar-img 
                                                               btn
@@ -47,10 +44,9 @@
                                                               'data-toggle': "dropdown", 
                                                               'aria-haspopup': "true", 
                                                               'aria-expanded': "false", 
-                                                              id: "dropdown1", 
-                                                              type: "button" %>    
+                                                              id: "dropdown1" %>    
       <% end %>
-      <div class="dropdown-menu" aria-labelledby="dropdown1">
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
         <p class="dropdown-item"><%= current_user.name %></p>
         <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
       </div>
