--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -126,6 +126,7 @@
     }
     .home-block__round {
         width: 95%;
+        margin-bottom: 20px;
         .home-block__p {
             font-size: 12px;
             text-align: left;
