--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -144,7 +144,7 @@
         border: none;
         border-radius: 6px;
         height: 40px;
-        width: 350px;
+        width: 90%;
         margin-bottom: 10px;
         font-size: 20px;
     }
