--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -84,7 +84,7 @@
         margin: 30px auto;
     }
     .stats__ff {
-        color: #aaaaaa;
+        color: #333333;
     }
     .f_number {
         color: #333333;
