--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -48,7 +48,7 @@
             margin: 30px auto;
         }
         .stats__ff {
-            color: #aaaaaa;
+            color: #333333;
         }
         .f_number {
             color: #333333;
@@ -87,7 +87,7 @@
             margin: 0 auto;
         }
         .score-card__table {
-            width: 320px;
+            width: 98%;
             display: flex;
             margin: 0 auto;
         }
@@ -146,7 +146,7 @@
     
     @media(max-width: 700px) {
         .archive-block {
-            width: auto;
+            width: 95%;
             .archive-block__round__table {
                 font-size: 12px;
             }
