--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -44,7 +44,7 @@
         margin: 30px auto;
     }
     .stats__ff {
-        color: #aaaaaa;
+        color: #333333;
     }
     .f_number {
         color: #333333;
