--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -190,6 +190,7 @@
     }
     .userShow-block {
         width: 96%;
+        margin-bottom: 20px;
         .userShow-block__avatar {
             width: 85px;
             height: 85px;
